# lighthouse

./: .gitignore  ABSTRACT_FACTORY_PROPOSAL.md  LICENSE  README.md  pyproject.toml
docs/: cognito-provider.md  custom-providers.md  migration-from-harbor.md  quickstart.md
lambda/: README.md  custom_message_handler.py  requirements.txt
lighthouse/: __init__.py  base.py  exceptions.py  models.py
lighthouse/auth/: __init__.py  base.py  cognito.py
lighthouse/cognito/: __init__.py  factory.py  identity_provider.py  tenant_resolver.py  token_verifier.py
lighthouse/core/: __init__.py  factory.py  tenant_resolver.py
lighthouse/factories/: __init__.py  cognito.py  mock.py
lighthouse/identity_providers/: __init__.py  cognito.py  mock.py
lighthouse/mock/: __init__.py  factory.py  identity_provider.py  tenant_resolver.py  token_verifier.py
lighthouse/providers/: __init__.py
lighthouse/providers/cognito/: __init__.py  provider.py
lighthouse/providers/mock/: __init__.py  provider.py
lighthouse/templates/: __init__.py  invitation_email.html  password_reset_email.html  verification_email.html
lighthouse/tenant_resolvers/: __init__.py  cognito.py  dynamodb.py  harbor.py  mock.py
lighthouse/token_verifiers/: __init__.py  cognito.py
tests/: conftest.py  test_cognito_provider.py  test_exceptions.py  test_interface.py  test_models.py  test_token_verifier.py
